--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,18 +21,23 @@ jobs:
       contents: read
 
     steps:
+    - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
     - uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
+        cache: gradle
 
     # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+    - name: Grant execution permission
+      run: chmod +x gradlew
+      
     - name: Build with Gradle Wrapper
       run: ./gradlew assembleDebug
 
